force-app/main/default/objects/Material_Item__c/Material_Item__c.object-meta.xml
<CustomObject>
    <description>Register each item/material used in a work order.</description>
    <label>Material Item</label>
    <nameField>
        <label>Material_Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material_Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>