force-app/main/default/objects/Material_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product name or Material utilized.</description>
    <label>Product_Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>