force-app/main/default/objects/Material_Item__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <description>Connect the work order to the matching.</description>
    <label>Work_Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Material_Items</relationshipLabel>
    <relationshipName>Material_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>